# editor

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.css  App.tsx  index.css  presets.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: Navbar.css  Navbar.tsx
src/types/: catalog.ts  project.ts
src/views/: Catalogo.tsx  Editor.css  Editor.tsx  Proyectos.css  Proyectos.tsx
