[package]
name = "editor-paquetes"
version = "0.1.0"
description = "Editor Paquetes - Desktop app for package/offer editing"
authors = []
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["shell-open", "dialog-save"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.21"

[features]
custom-protocol = ["tauri/custom-protocol"]
