[package]
name = "editor-paquetes"
version = "0.1.0"
description = "Editor Paquetes - Desktop app for package/offer editing"
authors = []
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["shell-open", "dialog-save", "dialog-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.21"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
